--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,473 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #f5f6f8;
+  color: #9e9ea4;
+  font-family: 'Montserrat', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.icon {
+  vertical-align: middle;
+  line-height: 1px;
+  font-size: 20px;
+}
+.icon_header {
+  vertical-align: middle;
+  line-height: 1px;
+  font-size: 26px;
+}
+.icon, .icon_header {
+  margin-right: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.close_icon {
+  color: red;
+  margin-left: 30px;
+  margin-top: 10px;
+  cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.grid-container {
+  display: grid;
+  grid-template-columns: 260px 1fr 1fr 1fr;
+  grid-template-rows: 0.2fr 3fr;
+  grid-template-areas:
+    'sidebar header header header'
+    'sidebar main main main';
+  height: 100vh;
+}
+
+/* Header  */
+.header {
+  grid-area: header;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 30px 0 30px;
+  margin-right: 35px;
+  margin-left: 25px;
+  
+}
+.hello{
+  color: black;
+  font-size: 15px;
+  font-weight: 600;
+}
+.wave{
+  font-weight: 100;
+}
+.form-control{
+border: none;
+border-radius: 10px;
+margin-right: 30px;
+}
+
+.menu-icon {
+  display: none;
+}
+/* End Header  */
+
+/* Sidebar  */
+#sidebar {
+  grid-area: sidebar;
+  height: 100%;
+  background-color: #040440;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  position: relative;
+}
+.arrow{
+  float: right;
+}
+.arrow2{
+  float: right;
+  position: absolute;
+  top: 12px;
+  right: 17px;
+}
+.btn-primary:hover {
+  color: #fff;
+  background-color: #9f00ff;
+  border-color: #00a23a;
+}
+
+
+
+.pic-pro{
+  width: 25px;
+  height: 25px;
+  border-radius: 15px;
+  position: absolute;
+  left:21px;
+  margin-top: 1px;
+}
+.butto{
+  position: absolute;
+  bottom:5%;
+  margin-left: 20px;
+  background-color: #2d2d69;
+  border: none;
+  width: 82%;
+  
+}
+.butto-text{
+  font-size: 10px;
+  margin-left: -44px;
+  opacity: 0.5;
+  position: absolute;
+  bottom: 1px;
+  padding-bottom: 6px;
+}
+.butto-name{
+  font-size: 12px;
+  position: absolute;
+  left: 65px;
+  font-weight: 600;
+}
+
+.sidebar-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+  padding: 15px 30px 0px 30px;
+  margin-bottom: 30px;
+}
+
+.sidebar-title > span {
+  display: none;
+}
+
+.sidebar-brand {
+  margin-top: 15px;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.sidebar-list {
+  padding: 0;
+  list-style-type: none;
+}
+
+.sidebar-list-item {
+  padding: 5px 15px 5px 19px;
+  font-size: 10px;
+  margin: 14px;
+  position: relative;
+}
+
+.sidebar-list-item:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  cursor: pointer;
+  border-radius: 7px;
+  margin: 14px;
+}
+
+.sidebar-list-item > a {
+  text-decoration: none;
+  color: #9e9ea4;
+}
+
+.sidebar-responsive {
+  display: inline !important;
+  position: absolute;
+  /*
+    we want the z-index of the sidebar higher so that
+    the charts are not showing over the sidebar 
+    on small screens
+  */
+  z-index: 12 !important;
+}
+
+/* End Sidebar  */
+
+
+/* Main  */  
+.main-container {
+  grid-area: main;
+  overflow-y: auto;
+  padding: 20px 20px;
+  color: rgba(255, 255, 255, 0.95);
+}
+
+.main-title {
+  display: flex;
+  justify-content: space-between;
+}
+
+.main-cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 20px;
+  margin: 15px 0;
+  margin-left: 36px;
+}
+
+.card {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding: 5px 5px;
+  height: 108px;
+  width: 207px;
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  transform: scale(1);
+}
+
+.card:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  transform: scale(1.05); 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+}
+
+
+.inner-text{
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  gap: 1px;
+}
+.text-value{
+  text-decoration: none;
+  font-size: 10px;
+  opacity: 0.4;
+  color: black;
+}
+.text-price{
+  font-size: 15px;
+  color: black;
+  font-weight: 700;
+}
+.text-increment{
+  font-size: 9px;
+  color: black;
+  font-weight: 400;
+}
+.text-increment-value{
+  color: #00a23a;
+  font-weight: 700;
+}
+.text-increment-value1{
+  color: #d90315;
+  font-weight: 700;
+}
+.card_icon1{
+  color: #00a23a;
+  height: 37px;
+  width: 37px;
+}
+.card_icon2{
+  color: #9f00ff;
+  height: 37px;
+  width: 37px;
+}
+.card_icon3{
+  color: #0f5fc2;
+  height: 37px;
+  width: 37px;
+}
+.card_icon4{
+  color: #d90315;
+  height: 37px;
+  width: 37px;
+}
+
+.card:first-child {
+  background-color: #ffffff;
+}
+
+.card:nth-child(2) {
+  background-color: #ffffff;
+}
+
+.card:nth-child(3) {
+  background-color: #ffffff;
+}
+
+.card:nth-child(4) {
+  background-color: #ffffff;
+}
+
+.card-inner {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 71px;
+  border-radius: 57px;
+  height: 69px;
+  background-color: #dbffeb;
+  margin-top: 13px;
+}
+.card-inner1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 71px;
+  border-radius: 57px;
+  height: 69px;
+  background-color: #e7dbff;
+  margin-top: 13px;
+}
+.card-inner2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 71px;
+  border-radius: 57px;
+  height: 69px;
+  background-color: #ccf2ff;
+  margin-top: 13px;
+}
+.card-inner3 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 71px;
+  border-radius: 57px;
+  height: 69px;
+  background-color: #ffb3da;
+  margin-top: 13px;
 }
 
-.App-link {
-  color: #61dafb;
+.card-inner > .card_icon {
+  font-size: 25px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.charts {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  margin-top: 60px;
+  height: 300px;
+  background-color: #ffffff;
+}
+.head{
+  margin-left: 36px;
+  margin-right: 52px;
+}
+/* End Main  */
+
+
+/* Medium <= 992px */
+  
+@media screen and (max-width: 992px) {
+  .grid-container {
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.2fr 3fr;
+    grid-template-areas:
+      'header'
+      'main';
   }
-  to {
-    transform: rotate(360deg);
+
+  #sidebar {
+    display: none;
+  }
+
+  .menu-icon {
+    display: inline;
+  }
+
+  .sidebar-title > span {
+    display: inline;
   }
 }
+.header {
+  grid-area: header;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  /* padding: 0px 0px 0px 0px; */
+  margin-right: 8px;
+  margin-left: 13px;
+}
+
+
+/* Small <= 768px */
+  
+@media screen and (max-width: 768px) {
+  .main-cards {
+    grid-template-columns: 1fr;
+    gap: 10px;
+    margin-bottom: 0;
+    margin-left: 24px;
+  }
+  .card {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 5px 5px;
+    height: 96px;
+    width: 224px;
+    border-radius: 5px;
+}
+
+  .charts {
+    grid-template-columns: 1fr;
+    margin-top: 30px;
+  }
+  .header {
+    grid-area: header;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* padding: 0px 0px 0px 0px; */
+    margin-right: -16px;
+    
+  }
+  #sidebar {
+    grid-area: sidebar;
+    height: 100%;
+    background-color: #040440;
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    position: relative;
+    right: 317px;
+    bottom: 43px;
+}
+.hello {
+  color: black;
+  font-size: 15px;
+  font-weight: 600;
+  width: 100px;
+}
+.sid{
+    display: flex!important;
+    width: 133px;
+}
+.pic-pro {
+  width: 25px;
+  height: 25px;
+  border-radius: 15px;
+  position: absolute;
+  left: 11px;
+  margin-top: 1px;
+}
+ul {
+  margin-top: 0;
+  margin-bottom: 5rem;
+}
+.butto-name {
+  font-size: 12px;
+  position: absolute;
+  left: 45px;
+  font-weight: 600;
+}
+}
+
+
+ 
+
+
+/* Extra Small <= 576px */
+
+@media screen and (max-width: 576px) {
+  .hedaer-left {
+    display: none;
+  }
+}
+
