--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,7 @@ body {
   color: black;
   font-size: 15px;
   font-weight: 600;
+  margin-left: 10px;
 }
 .wave{
   font-weight: 100;
@@ -65,6 +66,9 @@ margin-right: 30px;
 
 .menu-icon {
   display: none;
+}
+.me-2 {
+  margin-right: 1.5rem!important;
 }
 /* End Header  */
 
@@ -187,7 +191,7 @@ margin-right: 30px;
 .main-container {
   grid-area: main;
   overflow-y: auto;
-  padding: 20px 20px;
+  
   color: rgba(255, 255, 255, 0.95);
 }
 
@@ -199,9 +203,9 @@ margin-right: 30px;
 .main-cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 20px;
-  margin: 15px 0;
-  margin-left: 36px;
+
+  padding-left: 52px;
+ 
 }
 
 .card {
@@ -344,10 +348,7 @@ margin-right: 30px;
   height: 300px;
   background-color: #ffffff;
 }
-.head{
-  margin-left: 36px;
-  margin-right: 52px;
-}
+
 /* End Main  */
 
 
@@ -393,15 +394,22 @@ margin-right: 30px;
     grid-template-columns: 1fr;
     gap: 10px;
     margin-bottom: 0;
-    margin-left: 24px;
+  
+  }
+  body {
+    margin: 0;
+    padding: 0;
+    background-color: #f5f6f8;
+    color: #9e9ea4;
+    font-family: 'Montserrat', sans-serif;
   }
   .card {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     padding: 5px 5px;
-    height: 96px;
-    width: 224px;
+    height: 119px;
+    width: 271px;
     border-radius: 5px;
 }
 
@@ -426,8 +434,8 @@ margin-right: 30px;
     transition: all 0.5s;
     -webkit-transition: all 0.5s;
     position: relative;
-    right: 317px;
-    bottom: 43px;
+    right: 350px;
+  
 }
 .hello {
   color: black;
@@ -437,7 +445,7 @@ margin-right: 30px;
 }
 .sid{
     display: flex!important;
-    width: 133px;
+    width: 159px;
 }
 .pic-pro {
   width: 25px;
@@ -447,6 +455,7 @@ margin-right: 30px;
   left: 11px;
   margin-top: 1px;
 }
+
 ul {
   margin-top: 0;
   margin-bottom: 5rem;
@@ -470,4 +479,11 @@ ul {
     display: none;
   }
 }
-
+@media screen and (max-width: 425px){
+  .main-cards {
+    grid-template-columns: 1fr;
+    gap: 10px;
+    margin-bottom: 0;
+    padding-left: 42px;
+}
+}
