--- a/src/App.css
+++ b/src/App.css
@@ -484,6 +484,7 @@ ul {
     grid-template-columns: 1fr;
     gap: 10px;
     margin-bottom: 0;
+    padding-top:12px;
     padding-left: 42px;
 }
 }
